--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </video>
 </div>
 <div class="b-prize hide">
-  <p>Ты любопытный пидор</p>
+  <p class="fag">Нажми, чтобы узнать свой приз</p>
 </div>
 <div class="c-prize hide"></div>
 <script  src="main.js"></script>
